Archive2/93/eec9617b09fea9/output
main.cpp:1:4: error: expected unqualified-id before '[' token
 int[] ar_color = new int[80];
    ^
main.cpp:2:4: error: expected unqualified-id before '[' token
 int[] ar_y = new int[80];
    ^
main.cpp:3:4: error: expected unqualified-id before '[' token
 int[] ar_speed = new int[80];
    ^
main.cpp: In function 'void setup()':
main.cpp:7:16: error: 'size' was not declared in this scope
   size(800, 400);
                ^
main.cpp:8:15: error: 'frameRate' was not declared in this scope
   frameRate(60);
               ^
main.cpp:9:12: error: 'noStroke' was not declared in this scope
   noStroke();
            ^
main.cpp:14:14: error: 'makeOne' was not declared in this scope
     makeOne(i);
              ^
main.cpp: In function 'void draw()':
main.cpp:20:27: error: 'background' was not declared in this scope
   background(255, 255, 255);
                           ^
main.cpp:25:10: error: 'ar_color' was not declared in this scope
     fill(ar_color[i]);
          ^
main.cpp:25:21: error: 'fill' was not declared in this scope
     fill(ar_color[i]);
                     ^
main.cpp:26:25: error: 'ar_y' was not declared in this scope
     ellipse(5 + i * 10, ar_y[i], 10, 10);
                         ^
main.cpp:26:40: error: 'ellipse' was not declared in this scope
     ellipse(5 + i * 10, ar_y[i], 10, 10);
                                        ^
main.cpp:29:16: error: 'ar_speed' was not declared in this scope
     ar_y[i] += ar_speed[i];
                ^
main.cpp:30:20: error: 'height' was not declared in this scope
     if (ar_y[i] >= height)
                    ^
main.cpp:33:16: error: 'makeOne' was not declared in this scope
       makeOne(i);
                ^
main.cpp: In function 'void makeOne(int)':
main.cpp:40:3: error: 'ar_color' was not declared in this scope
   ar_color[i] = int(random(0, 0xffffff)) | 0xff000000;
   ^
main.cpp:40:39: error: 'random' was not declared in this scope
   ar_color[i] = int(random(0, 0xffffff)) | 0xff000000;
                                       ^
main.cpp:41:3: error: 'ar_y' was not declared in this scope
   ar_y[i] = int(random(0, 10)) * 5;
   ^
main.cpp:42:3: error: 'ar_speed' was not declared in this scope
   ar_speed[i] = int(random(1, 4)) * 5;
   ^
